--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Ian Webster
-description: Dedicated computer hardware and software enthusiast, eletronics tinkerer, passionate musician.
+description: Dedicated computer hardware and software enthusiast,
+eletronics tinkerer,
+passionate musician.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
