--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Ian Webster
-description: Dedicated computer hardware and software enthusiast,
+description: >
+Dedicated computer hardware and software enthusiast,
 eletronics tinkerer,
 passionate musician.
 show_downloads: true
