--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: Ian Webster
-description: >
-Dedicated computer hardware and software enthusiast,
-eletronics tinkerer,
-passionate musician.
+description: 
+>
+ Computer enthusiast,
+ eletronics tinkerer,
+ passionate musician.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
