--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Ian Webster
-description:
- Computer enthusiast,
- eletronics tinkerer,
- passionate musician.
+title: IAN WEBSTER
+description: Computer enthusiast, electronics tinkerer, passionate musician.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
