--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: IAN WEBSTER
+title: Ian Webster
 description: Computer enthusiast, electronics tinkerer, passionate musician.
 show_downloads: true
 google_analytics:
